--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
         "build": "pnpm typecheck && tsup",
         "dev": "tsup --watch --env.NODE_ENV development --onSuccess \"tsx -r dotenv/config ./dist/bundle/index.mjs\"",
         "prestart": "pnpm build",
-        "start": "node ./dist/bundle/index.mjs",
-        "start:api": "node ./dist/api/start.mjs",
-        "start:gateway": "node ./dist/gateway/start.mjs",
+        "start": "tsx -r dotenv/config ./dist/bundle/index.mjs",
+        "start:api": "tsx -r dotenv/config ./dist/api/start.mjs",
+        "start:gateway": "tsx -r dotenv/config ./dist/gateway/start.mjs",
         "typecheck": "tsc --noEmit"
     },
     "version": "1.3.0"
