--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@sentry/node": "^10.2.0",
         "@sentry/profiling-node": "^10.3.0",
         "@theinternetfolks/snowflake": "^1.3.0",
+        "amqplib": "^0.10.9",
         "bcrypt": "^6.0.0",
         "body-parser": "^2.2.0",
         "bufferutil": "^4.0.9",
@@ -22,6 +23,7 @@
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
         "node-cloudflare-r2": "^0.5.0",
+        "rabbitmq-stream-js-client": "^0.6.2",
         "sharp": "^0.34.3",
         "ws": "^8.18.3",
         "zlib-sync": "^0.1.10",
@@ -30,6 +32,7 @@
     "description": "",
     "devDependencies": {
         "@mutualzz/types": "workspace:*",
+        "@types/amqplib": "^0.10.7",
         "@types/bcrypt": "^6.0.0",
         "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.19",
