--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "name": "@mutualzz/server",
     "private": true,
     "scripts": {
-        "build": "pnpm typecheck && tsup",
+        "build": "pnpm typecheck && tsdown",
         "dev": "tsdown --watch --env.NODE_ENV development --on-success \"tsx -r dotenv/config ./dist/bundle/index.mjs\"",
         "prestart": "pnpm build",
         "start": "tsx -r dotenv/config ./dist/bundle/index.mjs",
