--- a/package.json
+++ b/package.json
@@ -51,12 +51,13 @@
     "private": true,
     "scripts": {
         "build": "pnpm typecheck && tsdown",
-        "dev": "tsdown --watch --env.NODE_ENV development --on-success \"tsx -r dotenv/config ./dist/bundle/index.mjs\"",
+        "dev": "tsdown --watch ./src --env.NODE_ENV development --on-success \"tsx -r dotenv/config ./dist/bundle/index.js\"",
         "prestart": "pnpm build",
         "start": "tsx -r dotenv/config ./dist/bundle/index.mjs",
         "start:api": "tsx -r dotenv/config ./dist/api/start.mjs",
         "start:gateway": "tsx -r dotenv/config ./dist/gateway/start.mjs",
         "typecheck": "tsc --noEmit"
     },
+    "type": "module",
     "version": "1.3.0"
 }
