--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.892.0",
         "@mutualzz/logger": "workspace:*",
+        "@mutualzz/validators": "workspace:*",
         "@sentry/node": "^10.12.0",
         "@sentry/profiling-node": "^10.12.0",
         "@theinternetfolks/snowflake": "^1.3.0",
