--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "author": "",
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.913.0",
+        "@aws-sdk/client-s3": "^3.917.0",
         "@mutualzz/logger": "workspace:*",
         "@mutualzz/validators": "workspace:*",
-        "@sentry/node": "^10.20.0",
-        "@sentry/profiling-node": "^10.20.0",
+        "@sentry/node": "^10.22.0",
+        "@sentry/profiling-node": "^10.22.0",
         "@theinternetfolks/snowflake": "^1.3.0",
         "amqplib": "^0.10.9",
         "bcrypt": "^6.0.0",
@@ -18,9 +18,9 @@
         "express": "^5.1.0",
         "fast-glob": "^3.3.3",
         "helmet": "^8.1.0",
-        "ioredis": "^5.8.1",
+        "ioredis": "^5.8.2",
         "lru-cache": "^11.2.2",
-        "mongoose": "^8.19.1",
+        "mongoose": "^8.19.2",
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
         "node-cloudflare-r2": "^0.5.1",
@@ -33,18 +33,19 @@
     "description": "",
     "devDependencies": {
         "@mutualzz/types": "workspace:*",
-        "@types/amqplib": "^0.10.7",
+        "@types/amqplib": "^0.10.8",
         "@types/bcrypt": "^6.0.0",
         "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.19",
-        "@types/express": "^5.0.3",
+        "@types/express": "^5.0.4",
         "@types/morgan": "^1.9.10",
         "@types/multer": "^2.0.0",
-        "@types/node": "^24.8.1",
+        "@types/node": "^24.9.1",
+        "@types/pg": "^8.15.5",
         "@types/ws": "^8.18.1",
         "dotenv": "^17.2.3",
         "eslint": "^9.38.0",
-        "tsdown": "^0.15.8",
+        "tsdown": "^0.15.9",
         "tsx": "^4.20.6"
     },
     "keywords": [],
@@ -52,7 +53,6 @@
     "private": true,
     "scripts": {
         "build": "pnpm typecheck && tsdown",
-        "dev": "tsdown --watch ./src --env.NODE_ENV development --on-success \"tsx -r dotenv/config ./dist/bundle/index.js\"",
         "prestart": "pnpm build",
         "start": "tsx -r dotenv/config ./dist/bundle/index.js",
         "start:api": "tsx -r dotenv/config ./dist/api/start.js",
