--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "private": true,
     "scripts": {
         "build": "pnpm typecheck && tsdown",
+        "dev": "tsdown --watch ./src --env.NODE_ENV development --on-success \"tsx -r dotenv/config ./dist/bundle/index.js\"",
         "prestart": "pnpm build",
         "start": "tsx -r dotenv/config ./dist/bundle/index.js",
         "start:api": "tsx -r dotenv/config ./dist/api/start.js",
