--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
         "@aws-sdk/client-s3": "^3.922.0",
         "@mutualzz/logger": "workspace:*",
         "@mutualzz/validators": "workspace:*",
-        "@sentry/node": "^10.22.0",
-        "@sentry/profiling-node": "^10.22.0",
+        "@sentry/node": "^10.23.0",
+        "@sentry/profiling-node": "^10.23.0",
         "@theinternetfolks/snowflake": "^1.3.0",
         "amqplib": "^0.10.9",
         "bcrypt": "^6.0.0",
@@ -20,7 +20,7 @@
         "helmet": "^8.1.0",
         "ioredis": "^5.8.2",
         "lru-cache": "^11.2.2",
-        "mongoose": "^8.19.2",
+        "mongoose": "^8.19.3",
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
         "node-cloudflare-r2": "^0.5.1",
@@ -40,12 +40,12 @@
         "@types/express": "^5.0.5",
         "@types/morgan": "^1.9.10",
         "@types/multer": "^2.0.0",
-        "@types/node": "^24.9.2",
+        "@types/node": "^24.10.0",
         "@types/pg": "^8.15.6",
         "@types/ws": "^8.18.1",
         "dotenv": "^17.2.3",
-        "eslint": "^9.39.0",
-        "tsdown": "^0.15.12",
+        "eslint": "^9.39.1",
+        "tsdown": "^0.16.0",
         "tsx": "^4.20.6"
     },
     "keywords": [],
@@ -53,11 +53,11 @@
     "private": true,
     "scripts": {
         "build": "pnpm typecheck && tsdown",
-        "dev": "tsdown --watch ./src --env.NODE_ENV development --on-success \"tsx -r dotenv/config ./dist/bundle/index.js\"",
+        "dev": "tsdown --watch ./src --env.NODE_ENV development --on-success \"tsx -r dotenv/config ./dist/bundle/index.mjs\"",
         "prestart": "pnpm build",
-        "start": "tsx -r dotenv/config ./dist/bundle/index.js",
-        "start:api": "tsx -r dotenv/config ./dist/api/start.js",
-        "start:gateway": "tsx -r dotenv/config ./dist/gateway/start.js",
+        "start": "tsx -r dotenv/config ./dist/bundle/index.mjs",
+        "start:api": "tsx -r dotenv/config ./dist/api/start.mjs",
+        "start:gateway": "tsx -r dotenv/config ./dist/gateway/start.mjs",
         "typecheck": "tsc --noEmit"
     },
     "type": "module",
