--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
     "author": "",
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.922.0",
+        "@aws-sdk/client-s3": "^3.931.0",
         "@mutualzz/logger": "workspace:*",
         "@mutualzz/validators": "workspace:*",
-        "@sentry/node": "^10.23.0",
-        "@sentry/profiling-node": "^10.23.0",
+        "@sentry/node": "^10.25.0",
+        "@sentry/profiling-node": "^10.25.0",
         "@theinternetfolks/snowflake": "^1.3.0",
+        "@toondepauw/node-zstd": "^1.2.0",
+        "@yukikaze-bot/erlpack": "^1.0.1",
         "amqplib": "^0.10.9",
         "bcrypt": "^6.0.0",
         "body-parser": "^2.2.0",
@@ -14,18 +16,23 @@
         "color": "^5.0.2",
         "cors": "^2.8.5",
         "cryptr": "^6.4.0",
+        "drizzle-orm": "^0.44.7",
         "emojibase-regex": "^16.0.0",
         "express": "^5.1.0",
         "fast-glob": "^3.3.3",
+        "fast-zlib": "^2.0.1",
         "helmet": "^8.1.0",
         "ioredis": "^5.8.2",
+        "json-bigint": "^1.0.0",
         "lru-cache": "^11.2.2",
         "mongoose": "^8.19.3",
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
         "node-cloudflare-r2": "^0.5.1",
+        "pako": "^2.1.0",
+        "pg": "^8.16.3",
         "rabbitmq-stream-js-client": "^0.6.2",
-        "sharp": "^0.34.4",
+        "sharp": "^0.34.5",
         "ws": "^8.18.3",
         "zlib-sync": "^0.1.10",
         "zod": "^4.1.12"
@@ -38,26 +45,30 @@
         "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.5",
+        "@types/json-bigint": "^1.0.4",
         "@types/morgan": "^1.9.10",
         "@types/multer": "^2.0.0",
-        "@types/node": "^24.10.0",
+        "@types/node": "^24.10.1",
         "@types/pg": "^8.15.6",
         "@types/ws": "^8.18.1",
         "dotenv": "^17.2.3",
+        "drizzle-kit": "^0.31.7",
         "eslint": "^9.39.1",
-        "tsdown": "^0.16.0",
+        "tsdown": "^0.16.4",
         "tsx": "^4.20.6"
     },
     "keywords": [],
     "name": "@mutualzz/server",
     "private": true,
     "scripts": {
-        "build": "pnpm typecheck && tsdown",
+        "build": "pnpm drizzle:migration && pnpm typecheck && tsdown",
         "dev": "tsdown --watch ./src --env.NODE_ENV development --on-success \"tsx -r dotenv/config ./dist/bundle/index.mjs\"",
+        "drizzle:generate": "drizzle-kit generate",
+        "drizzle:migrate": "drizzle-kit migrate",
+        "drizzle:migration": "pnpm drizzle:generate && pnpm drizzle:migrate",
+        "drizzle:push": "drizzle-kit push",
         "prestart": "pnpm build",
         "start": "tsx -r dotenv/config ./dist/bundle/index.mjs",
-        "start:api": "tsx -r dotenv/config ./dist/api/start.mjs",
-        "start:gateway": "tsx -r dotenv/config ./dist/gateway/start.mjs",
         "typecheck": "tsc --noEmit"
     },
     "type": "module",
