--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
     "author": "",
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.931.0",
+        "@aws-sdk/client-s3": "^3.948.0",
+        "@faker-js/faker": "^10.1.0",
         "@mutualzz/logger": "workspace:*",
         "@mutualzz/validators": "workspace:*",
-        "@sentry/node": "^10.25.0",
-        "@sentry/profiling-node": "^10.25.0",
+        "@sentry/node": "^10.30.0",
+        "@sentry/profiling-node": "^10.30.0",
+        "@spotify/web-api-ts-sdk": "^1.2.0",
         "@theinternetfolks/snowflake": "^1.3.0",
         "@toondepauw/node-zstd": "^1.2.0",
         "@yukikaze-bot/erlpack": "^1.0.1",
         "amqplib": "^0.10.9",
         "bcrypt": "^6.0.0",
-        "body-parser": "^2.2.0",
+        "body-parser": "^2.2.1",
         "bufferutil": "^4.0.9",
-        "color": "^5.0.2",
+        "color": "^5.0.3",
         "cors": "^2.8.5",
         "cryptr": "^6.4.0",
-        "drizzle-orm": "^0.44.7",
-        "emojibase-regex": "^16.0.0",
-        "express": "^5.1.0",
+        "dayjs": "^1.11.19",
+        "drizzle-orm": "^0.45.1",
+        "emojibase-regex": "^17.0.0",
+        "express": "^5.2.1",
+        "express-rate-limit": "^8.2.1",
         "fast-glob": "^3.3.3",
         "fast-zlib": "^2.0.1",
         "helmet": "^8.1.0",
         "ioredis": "^5.8.2",
         "json-bigint": "^1.0.0",
-        "lru-cache": "^11.2.2",
-        "mongoose": "^8.19.3",
+        "lru-cache": "^11.2.4",
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
         "node-cloudflare-r2": "^0.5.1",
@@ -33,9 +36,10 @@
         "pg": "^8.16.3",
         "rabbitmq-stream-js-client": "^0.6.2",
         "sharp": "^0.34.5",
+        "url-metadata": "^5.4.1",
         "ws": "^8.18.3",
         "zlib-sync": "^0.1.10",
-        "zod": "^4.1.12"
+        "zod": "^4.1.13"
     },
     "description": "",
     "devDependencies": {
@@ -44,18 +48,18 @@
         "@types/bcrypt": "^6.0.0",
         "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.19",
-        "@types/express": "^5.0.5",
+        "@types/express": "^5.0.6",
         "@types/json-bigint": "^1.0.4",
         "@types/morgan": "^1.9.10",
         "@types/multer": "^2.0.0",
-        "@types/node": "^24.10.1",
-        "@types/pg": "^8.15.6",
+        "@types/node": "^25.0.0",
+        "@types/pg": "^8.16.0",
         "@types/ws": "^8.18.1",
         "dotenv": "^17.2.3",
-        "drizzle-kit": "^0.31.7",
+        "drizzle-kit": "0.31.8",
         "eslint": "^9.39.1",
-        "tsdown": "^0.16.4",
-        "tsx": "^4.20.6"
+        "tsdown": "^0.17.2",
+        "tsx": "^4.21.0"
     },
     "keywords": [],
     "name": "@mutualzz/server",
@@ -72,5 +76,5 @@
         "typecheck": "tsc --noEmit"
     },
     "type": "module",
-    "version": "1.3.0"
+    "version": "2.0.0"
 }
