--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     },
     "description": "",
     "devDependencies": {
+        "@mutualzz/eslint-config": "workspace:*",
         "@mutualzz/types": "workspace:*",
         "@types/amqplib": "^0.10.8",
         "@types/bcrypt": "^6.0.0",
@@ -74,7 +75,8 @@
         "dev": "cross-env NODE_ENV=development tsx watch -r dotenv/config ./src/bundle/index.ts",
         "prestart": "pnpm build",
         "start": "node -r dotenv/config ./dist/bundle/index.mjs",
-        "typecheck": "tsc --noEmit"
+        "typecheck": "tsc --noEmit",
+      "lint": "eslint ."
     },
     "type": "module",
     "version": "2.0.0"
