--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
     "author": "",
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.965.0",
+        "@aws-sdk/client-s3": "^3.974.0",
+        "@discordjs/builders": "^1.13.1",
+        "@discordjs/opus": "^0.10.0",
+        "@discordjs/voice": "^0.19.0",
         "@faker-js/faker": "^10.2.0",
         "@mutualzz/logger": "workspace:*",
         "@mutualzz/validators": "workspace:*",
-        "@sentry/node": "^10.32.1",
-        "@sentry/profiling-node": "^10.32.1",
+        "@sapphire/fetch": "^3.0.5",
+        "@sapphire/framework": "^5.5.0",
+        "@sapphire/pieces": "^4.4.1",
+        "@sapphire/plugin-subcommands": "^7.0.1",
+        "@sapphire/utilities": "^3.18.2",
+        "@sentry/node": "^10.36.0",
+        "@sentry/profiling-node": "^10.36.0",
         "@spotify/web-api-ts-sdk": "^1.2.0",
         "@theinternetfolks/snowflake": "^1.3.0",
         "@toondepauw/node-zstd": "^1.2.0",
@@ -16,9 +24,14 @@
         "body-parser": "^2.2.2",
         "bufferutil": "^4.1.0",
         "color": "^5.0.3",
-        "cors": "^2.8.5",
+        "cors": "^2.8.6",
         "cryptr": "^6.4.0",
         "dayjs": "^1.11.19",
+        "discord-logs": "^2.2.1",
+        "discord-player": "^7.1.0",
+        "discord-player-spotify": "^1.1.7",
+        "discord-player-youtubei": "^1.5.0",
+        "discord.js": "^14.25.1",
         "drizzle-orm": "^0.45.1",
         "emojibase-regex": "^17.0.0",
         "express": "^5.2.1",
@@ -26,20 +39,23 @@
         "fast-glob": "^3.3.3",
         "fast-zlib": "^2.0.1",
         "helmet": "^8.1.0",
-        "ioredis": "^5.9.1",
+        "ioredis": "^5.9.2",
         "json-bigint": "^1.0.0",
         "lru-cache": "^11.2.4",
+        "mediaplex": "^1.0.0",
         "morgan": "^1.10.1",
+        "ms": "^2.1.3",
         "multer": "^2.0.2",
         "node-cloudflare-r2": "^0.5.1",
+        "owospeak": "^1.0.4",
         "pako": "^2.1.0",
-        "pg": "^8.16.3",
-        "rabbitmq-stream-js-client": "^0.6.2",
+        "pg": "^8.17.2",
+        "rabbitmq-stream-js-client": "^1.0.0",
         "sharp": "^0.34.5",
         "url-metadata": "^5.4.1",
         "ws": "^8.19.0",
         "zlib-sync": "^0.1.10",
-        "zod": "^4.3.5"
+        "zod": "^4.3.6"
     },
     "description": "",
     "devDependencies": {
@@ -53,14 +69,14 @@
         "@types/json-bigint": "^1.0.4",
         "@types/morgan": "^1.9.10",
         "@types/multer": "^2.0.0",
-        "@types/node": "^25.0.3",
+        "@types/node": "^25.0.10",
         "@types/pg": "^8.16.0",
         "@types/ws": "^8.18.1",
         "cross-env": "10.1.0",
         "dotenv": "^17.2.3",
         "drizzle-kit": "0.31.8",
         "eslint": "^9.39.2",
-        "tsdown": "^0.18.4",
+        "tsdown": "^0.20.1",
         "tsx": "^4.21.0"
     },
     "keywords": [],
@@ -76,7 +92,7 @@
         "prestart": "pnpm build",
         "start": "node -r dotenv/config ./dist/bundle/index.mjs",
         "typecheck": "tsc --noEmit",
-      "lint": "eslint ."
+        "lint": "eslint ."
     },
     "type": "module",
     "version": "2.0.0"
