--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
         "@spotify/web-api-ts-sdk": "^1.2.0",
         "@theinternetfolks/snowflake": "^1.3.0",
         "@toondepauw/node-zstd": "^1.2.0",
+        "@yujinakayama/apple-music": "^0.4.1",
         "@yukikaze-bot/erlpack": "^1.0.1",
         "amqplib": "^0.10.9",
-        "apple-music-metadata": "^2.0.1",
         "bcrypt": "^6.0.0",
         "body-parser": "^2.2.2",
         "bufferutil": "^4.1.0",
@@ -43,6 +43,7 @@
         "helmet": "^8.1.0",
         "ioredis": "^5.9.2",
         "json-bigint": "^1.0.0",
+        "jsonwebtoken": "^9.0.3",
         "lru-cache": "^11.2.5",
         "mediaplex": "^1.0.0",
         "morgan": "^1.10.1",
@@ -69,6 +70,7 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
         "@types/json-bigint": "^1.0.4",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/morgan": "^1.9.10",
         "@types/ms": "^2.1.0",
         "@types/multer": "^2.0.0",
@@ -92,10 +94,10 @@
         "db:migration": "pnpm db:generate && pnpm db:migrate",
         "db:push": "drizzle-kit push",
         "dev": "cross-env NODE_ENV=development tsx watch -r dotenv/config ./src/bundle/index.ts",
+        "lint": "eslint .",
         "prestart": "pnpm build",
         "start": "node -r dotenv/config ./dist/bundle/index.mjs",
-        "typecheck": "tsc --noEmit",
-        "lint": "eslint ."
+        "typecheck": "tsc --noEmit"
     },
     "type": "module",
     "version": "2.0.0"
