--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "author": "",
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.978.0",
+        "@aws-sdk/client-s3": "^3.990.0",
         "@discordjs/builders": "^1.13.1",
         "@discordjs/opus": "^0.10.0",
         "@discordjs/voice": "^0.19.0",
-        "@faker-js/faker": "^10.2.0",
+        "@faker-js/faker": "^10.3.0",
         "@mutualzz/logger": "workspace:*",
         "@mutualzz/validators": "workspace:*",
+        "@mutualzz/permissions": "workspace:*",
         "@sapphire/fetch": "^3.0.5",
         "@sapphire/framework": "^5.5.0",
         "@sapphire/pieces": "^4.4.1",
@@ -41,10 +42,10 @@
         "fast-glob": "^3.3.3",
         "fast-zlib": "^2.0.1",
         "helmet": "^8.1.0",
-        "ioredis": "^5.9.2",
+        "ioredis": "^5.9.3",
         "json-bigint": "^1.0.0",
         "jsonwebtoken": "^9.0.3",
-        "lru-cache": "^11.2.5",
+        "lru-cache": "^11.2.6",
         "mediaplex": "^1.0.0",
         "morgan": "^1.10.1",
         "ms": "^2.1.3",
@@ -52,7 +53,7 @@
         "node-cloudflare-r2": "^0.5.1",
         "owospeak": "^1.0.4",
         "pako": "^2.1.0",
-        "pg": "^8.17.2",
+        "pg": "^8.18.0",
         "rabbitmq-stream-js-client": "^1.0.0",
         "rate-limit-redis": "^4.3.1",
         "redis": "^5.10.0",
@@ -76,14 +77,14 @@
         "@types/morgan": "^1.9.10",
         "@types/ms": "^2.1.0",
         "@types/multer": "^2.0.0",
-        "@types/node": "^25.1.0",
+        "@types/node": "^25.2.3",
         "@types/pg": "^8.16.0",
         "@types/ws": "^8.18.1",
         "cross-env": "10.1.0",
-        "dotenv": "^17.2.3",
-        "drizzle-kit": "0.31.8",
-        "eslint": "^9.39.2",
-        "tsdown": "^0.20.1",
+        "dotenv": "^17.3.1",
+        "drizzle-kit": "0.31.9",
+        "eslint": "^10.0.0",
+        "tsdown": "^0.20.3",
         "tsx": "^4.21.0"
     },
     "keywords": [],
@@ -95,12 +96,12 @@
         "db:migrate": "drizzle-kit migrate",
         "db:migration": "pnpm db:generate && pnpm db:migrate",
         "db:push": "drizzle-kit push",
-        "dev": "cross-env NODE_ENV=development tsx watch -r dotenv/config ./src/bundle/index.ts",
+        "dev": "cross-env NODE_ENV=development tsx watch --include \"./src/**/*\" -r dotenv/config ./src/bundle/index.ts",
         "lint": "eslint .",
         "prestart": "pnpm build",
         "start": "node -r dotenv/config ./dist/bundle/index.mjs",
         "typecheck": "tsc --noEmit"
     },
     "type": "module",
-    "version": "3.0.0"
+    "version": "4.0.0"
 }
