Working on many things

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "@discordjs/voice": "^0.19.0",
         "@faker-js/faker": "^10.3.0",
         "@mutualzz/logger": "workspace:*",
-        "@mutualzz/validators": "workspace:*",
         "@mutualzz/permissions": "workspace:*",
+        "@mutualzz/validators": "workspace:*",
         "@sapphire/fetch": "^3.0.5",
         "@sapphire/framework": "^5.5.0",
         "@sapphire/pieces": "^4.4.1",
@@ -42,6 +42,7 @@
         "fast-glob": "^3.3.3",
         "fast-zlib": "^2.0.1",
         "helmet": "^8.1.0",
+        "imurmurhash": "^0.1.4",
         "ioredis": "^5.9.3",
         "json-bigint": "^1.0.0",
         "jsonwebtoken": "^9.0.3",
@@ -72,6 +73,7 @@
         "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
+        "@types/imurmurhash": "^0.1.4",
         "@types/json-bigint": "^1.0.4",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/morgan": "^1.9.10",
