--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "jsonwebtoken": "^9.0.3",
         "lru-cache": "^11.2.6",
         "mediaplex": "^1.0.0",
+        "mediasoup": "^3.19.17",
         "morgan": "^1.10.1",
         "ms": "^2.1.3",
         "multer": "^2.0.2",
